--- a/animal.shelter.html
+++ b/animal.shelter.html
@@ -8,8 +8,9 @@
   <div class="body-text">
   <h1>House of Assorted Rodents, Pests and Vermin</h1>
   <h2>Check Out Our Little Guys!</h2>
-  <img src="Marvin.jpeg" alt="Marvin the mole-rat">
-  <p class="caption">This <em>handsome</em> boi is our resident naked mole-rat. In addition to devilishly good looks he's <strong>highly</strong> environmentally adaptable and despises human affection!</p>
+  <img src="img/Marvin.jpeg" alt="Marvin the mole-rat">
+  <div class="column"><p class="caption">This <em>handsome</em> boi is our resident naked mole-rat. In addition to devilishly good looks he's <strong>highly</strong> environmentally adaptable and despises human affection!</p></div>
   </div>
+
 </body>
 </html>
